# Spiritus

./: .bandit  .dockerignore  .env.example  .gitignore  .unban_token  API.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  LICENSE  MIGRATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  alert_rules.yml  app_config.py  docker-compose.yml  install.sh  main.py  models.py  prometheus.yml  protocols.py  pyproject.toml  pytest.ini  requirements-dpi.txt  requirements-firewall.txt  requirements.txt  rewrite_protocols.py  security.py  test_configs.py  test_vpnweb.py  vpn-panel.service  vpn-web.py
.github/workflows/: security.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: abuse_prevention.py  auth.py  celery_tasks.py  config.py  database.py  dpi_evasion.py  main.py  models.py  observability.py  orchestrator.py  payments.py  protocol_engine.py  redis_client.py  reseller.py  security.py  telegram_bot.py  timeutil.py
app/api/: __init__.py  abuse.py  agents.py  auth.py  compat.py  dpi.py  payments.py  protocols.py  resellers.py  security.py  system.py  users.py
config/: nginx-fallback.conf  xray-config.json
config/fallback-site/: 404.html  50x.html  index.html
docs/: 01_QUICK_START.md  02_USER_MANAGEMENT.md  03_PROTOCOLS_EXPLAINED.md  04_ADVANCED_DPI_FIGHTBACK.md
scripts/: demo_resilience.py  dpi_evasion.py  firewall_exhaustion.py  google-tcp-tunnel.py  setup-dpi-evasion.sh  speed_manager.py  tcp-relay.py
static/css/: panel.css
static/js/: panel.js
templates/: agent-panel.html  panel.html  sub.html
templates/includes/: footer.html  header.html  panel_part_aa  panel_part_ab  panel_part_ac  panel_part_ad  panel_part_ae
